fix(styling): grouping with checkbox should be aligned left (#582)

--- a/src/app/modules/angular-slickgrid/styles/slick-plugins.scss
+++ b/src/app/modules/angular-slickgrid/styles/slick-plugins.scss
@@ -525,6 +525,11 @@
     border-radius: $checkbox-selector-icon-border-radius;
   }
 }
+.slick-group {
+  .slick-cell-checkboxsel {
+    text-align: left;
+  }
+}
 
 // ----------------------------------------------
 // Multi-Select Filter
